--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
     <body>
         <h1>hello world</h1>
-        <p>I´m hosted with Github Pages.</p>
-        <h1>hello world</h1>
-        <p>I´m hosted with Github Pages.</p>
+        <p>Im hosted with Github Pages.</p>
     </body>
 </html>
