--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <Title>danielariasmar.github.io</Title>
+    </head>
     <body>
         <h1>hello world</h1>
         <p>Im hosted with Github Pages.</p>
