--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <Title>danielariasmar.github.io</Title>
+        <title>danielariasmar.github.io</title>
     </head>
     <body>
         <h1>hello world</h1>
