--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>hello world</h1>
-        <p>Im hosted with Github Pages.</p>
+        <p>Im hosted with Github Pages 2.</p>
     </body>
 </html>
