--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>danielariasmar.github.io</title>
+        <title>Prueba de página</title>
     </head>
     <body>
         <h1>hello world</h1>
