--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Prueba de página</title>
+        <title>Segunda prueba de página</title>
     </head>
     <body>
         <h1>hello world</h1>
-        <p>Im hosted with Github Pages 2.</p>
+        <p>Im hosted with Github Pages.</p>
     </body>
 </html>
